change to mysql

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "AppConnStr": "Server=(localdb)\\MSSQLLocalDB;Database=WeiXinCoreDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"AppConnStr": "Server=(localdb)\\MSSQLLocalDB;Database=WeiXinCoreDB;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AppMySqlConnStr": "Server=10.10.32.51;database=E1wyQbACtRvFXg4H;uid=uEcRqK76BMdIz3FY;pwd=pezCGUOsTQnLAojM3"
+    //"AppMySqlConnStr": "Server=172.17.21.69;database=WeiXinCore;uid=root;pwd=hbsc2016"
   }
 }
