--- a/project.json
+++ b/project.json
@@ -4,7 +4,7 @@
       "version": "1.0.0",
       "type": "platform"
     },
-    "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+    "Microsoft.AspNetCore.Diagnostics":"1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
@@ -12,11 +12,10 @@
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.0.0",
-    "Microsoft.EntityFrameworkCore": "1.0.0",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
-    "Microsoft.AspNetCore.Mvc": "1.0.0",
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "MySql.Data.EntityFrameworkCore": "7.0.5-IR21"
+    "Microsoft.EntityFrameworkCore":"1.0.1",
+    "Microsoft.AspNetCore.Mvc":"1.0.1",
+    "Microsoft.EntityFrameworkCore.Tools":"1.0.0-preview2-final",
+    "Pomelo.EntityFrameworkCore.MySql": "1.0.1-prerelease-10010"
   },
 
   "tools": {
