--- a/project.json
+++ b/project.json
@@ -15,7 +15,8 @@
     "Microsoft.EntityFrameworkCore":"1.0.1",
     "Microsoft.AspNetCore.Mvc":"1.0.1",
     "Microsoft.EntityFrameworkCore.Tools":"1.0.0-preview2-final",
-    "Pomelo.EntityFrameworkCore.MySql": "1.0.1-prerelease-10010"
+    "Pomelo.EntityFrameworkCore.MySql": "1.0.1-prerelease-10010",
+    "System.Security.Cryptography.Algorithms": "4.2.0"
   },
 
   "tools": {
